[bdist_wheel]
universal = 1

[metadata]
name = sweetrpg-web-core
version = attr: sweetrpg_web_core.__version__
url = https://sweetrpg.com
project_urls =
    Documentation = https://sweetrpg.github.io/web-core
license = MIT
author = Paul Schifferer
author_email = dm@sweetrpg.com
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = =src
include_package_data = true
python_required = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sweetrpg-web-core = sweetrpg_web_core.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    sweetrpg_web_core
    tests

[coverage:paths]
source =
    src

[semantic_release]
version_variable = src/sweetrpg_web_core/__init__.py:__version__
branch = develop
